# forge-ai-local

./: .editorconfig  .gitignore  .prettierrc  LICENSE  README.md
docs/: requirements.md
runtime/: CMakeLists.txt  Makefile  README.md  test_diagnostic.sh
runtime/include/core/: action_dispatcher.h  error.h  tool.h  tool_registry.h
runtime/include/ipc/: socket_server.h
runtime/include/llm/: llama_config.h  llama_engine.h
runtime/include/tools/: argument_validator.h  list_dir_tool.h
runtime/src/: main.cpp
runtime/src/core/: action_dispatcher.cpp  tool_registry.cpp
runtime/src/ipc/: socket_server.cpp
runtime/src/llm/: llama_config.cpp  llama_engine.cpp
runtime/src/tools/: argument_validator.cpp  list_dir_tool.cpp
script/: README.md  setup.sh
